--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -1,6 +1,6 @@
 ﻿<section class="dz-row">
-  @Html.Partial("_LobbyLoginBar")
   <header id="lobbyHeader">
+	  @Html.Partial("_LoginBar")
     <div id="lobbyLogo">
       <img src="~/Images/Logo/kkLogo.png" alt="logo" style="position:relative;top:4px;" />
     </div>
