--- a/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
@@ -10,7 +10,7 @@
 
 #lobbyEventsMasonryContainer .event-block {
 	line-height: 1;
-	background: rgb(250,250,250);
+	background: rgb(165, 165, 165);
 }
 
 #lobbyEventsMasonryContainer .event-block-info-link {
@@ -19,7 +19,7 @@
 
 #lobbyEventsMasonryContainer .event-block-info-name {
 	font-size: 1.5em;
-	color: #636363;
+	color: #f7f7f7;
 	padding: 6px;
 }
 
@@ -40,25 +40,34 @@
 #lobbyEventsMasonryContainer .event-block-footer {
 	padding: 10px;
 	overflow: hidden;
-	color: rgb(152, 152, 137);
+	color: #dedede;
 }
 
 #lobbyEventsMasonryContainer .event-block-info-date {
 	margin-bottom: 2px;
-	font-size: 1.6em;
+	font-size: 1.8em;
 }
 
 #lobbyEventsMasonryContainer .event-block-info-body {
 	margin-top: 20px;
+	color: rgb(220, 220, 220);
 }
 
 #lobbyEventsMasonryContainer .event-block-info-time {
 	font-size: 1.2em;
-	color: #969689;
+	color: rgb(72, 68, 62);
+}
+
+#lobbyEventsMasonryContainer .block-info-description {
+	color: #f7f7f7;
+}
+
+#lobbyEventsMasonryContainer .block-info-details {
+	color: #f7f7f7;
 }
 
 #lobbyEventsMasonryContainer .event-block-info-addedby {
-	color: gray;
+	color: rgb(76, 76, 76);
 	text-align: right;
 }
 
@@ -74,7 +83,7 @@
 
 #detailsEventBlockList .event-block {
 	line-height: 1;
-	background: rgb(103, 103, 103);
+	background: rgb(165, 165, 165);
 }
 
 #detailsEventBlockList .event-block-info-link {
@@ -84,7 +93,7 @@
 #detailsEventBlockList .event-block-info-name {
 	font-size: 1.5em;
 	color: #f7f7f7;
-	padding: 6px;
+	padding: 10px;
 }
 
 #detailsEventBlockList .event-kind-tag {
@@ -95,20 +104,25 @@
 }
 
 #detailsEventBlockList .event-block-body {
-	color: rgb(72, 68, 62);
+	color: rgb(220, 220, 220);
 	padding: 10px;
 	font-size: 1.2em;
+}
+
+#detailsEventBlockList .event-block-info-address {
+	color: rgb(72, 68, 62);
 }
 
 #detailsEventBlockList .event-block-footer {
 	padding: 10px;
 	overflow: hidden;
-	color: rgb(152, 152, 137);
+	color: #dedede;
 }
 
 #detailsEventBlockList .event-block-info-date {
 	margin-bottom: 2px;
-	font-size: 1.6em;
+	font-size: 1em;
+	color: rgb(76, 76, 76);
 }
 
 #detailsEventBlockList .event-block-info-body {
@@ -117,12 +131,23 @@
 
 #detailsEventBlockList .event-block-info-time {
 	font-size: 1.8em;
-	color: #b3b3b3;
+	color: rgb(76, 76, 76);
+}
+
+#detailsEventBlockList .block-info-description {
+	color: #f7f7f7;
+}
+
+#detailsEventBlockList .block-info-details {
+	color: #f7f7f7;
 }
 
 #detailsEventBlockList .event-block-info-addedby {
-	color: gray;
+	color: rgb(76, 76, 76);
 	text-align: right;
+}
+
+#detailsEventBlockList .event-block-info-price {
 }
 
 #detailsEventBlockList .event-block-menu {
