--- a/KalendarzKarierySolution/KalendarzKariery/Scripts/CalendarWidget/calendarWidget.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Scripts/CalendarWidget/calendarWidget.css
@@ -177,7 +177,7 @@
 
 .today-cell {
 	background: #ffffff !important;
-	border: 2px solid #f7f7f3 !important;
+	border: 2px solid #808080 !important;
 }
 
 	.today-cell .cell-span-container {
