--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_LoginBar.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_LoginBar.cshtml
@@ -5,7 +5,7 @@
   @using (Html.BeginForm( "LogOff", "Account", FormMethod.Post, new { id = "logoutForm" } ))
   {
   @Html.AntiForgeryToken()
-  <a style="color: rgb(255, 109, 109);padding-right:4px;" href="javascript:document.getElementById('logoutForm').submit()">wyloguj</a>   }
+  <a style="color: rgb(255, 109, 109);" href="javascript:document.getElementById('logoutForm').submit()">wyloguj</a>   }
 </div>
 }
 else
