--- a/KalendarzKarierySolution/KalendarzKariery/Scripts/CalendarWidget/calendarWidget.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Scripts/CalendarWidget/calendarWidget.css
@@ -133,6 +133,7 @@
 
 .dark-icon {
 	color: white;
+	background: rgb(188,188,188);
 }
 
 .light-icon {
@@ -197,15 +198,4 @@
 	table-layout: fixed;
 	width: 100%;
 	background: rgba(210, 210, 203, 0.47);
-}
-
-.addNewEvent-cellIcon {
-	width: 40px;
-	height: 20px;
-	position: absolute;
-	right: 1px;
-	top: 2px;
-	text-align: center;
-	display: none;
-	z-index: 99;
 }
