--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @model KalendarzKarieryData.Models.ViewModels.MainViewModel
 @Html.Partial("_LoginBar")
+<div id="initialWhiteOverlay"></div>
 <div id="dzieuo" style="visibility: hidden;">
 	<section id="lobby" class="dz-column">
 		@Html.Partial( "_Lobby" )
