--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsManageOwnPublicEventsMenuItem.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsManageOwnPublicEventsMenuItem.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="display-events-overview-body" data-bind="visible: $root.detailsPageJournalMenu.selectedMenuItem() == 2">
-  <div class="legend-oldorupcoming hover-cursor-pointer" data-bind="click: function () { $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showOld( !$root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showOld() ), $root.showSelectedEvents( $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.selectedEvents, 'old', $root.detailsPageJournalMenu.selectedEventKindValues ) }">
+  <div class="legend-oldorupcoming hover-cursor-pointer" data-bind="css: { open : $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showOld() }, click: function () { $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showOld( !$root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showOld() ), $root.showSelectedEvents( $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.selectedEvents, 'old', $root.detailsPageJournalMenu.selectedEventKindValues ) }">
     <div class="oldorupcoming-text-container">
       <span class="oldorupcoming-sign" data-bind="text: $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showOld() == true ? '-' : '+'">+</span>
       <span>stare</span>
@@ -29,7 +29,7 @@
       </div>
     </div>
   </div>
-  <div class="legend-oldorupcoming hover-cursor-pointer" data-bind="click: function () { $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showUpcoming( !$root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showUpcoming() ), $root.showSelectedEvents( $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.selectedEvents, 'upcoming', $root.detailsPageJournalMenu.selectedEventKindValues ) }">
+  <div class="legend-oldorupcoming hover-cursor-pointer" data-bind="css: { open: $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showUpcoming() }, click: function () { $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showUpcoming( !$root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showUpcoming() ), $root.showSelectedEvents( $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.selectedEvents, 'upcoming', $root.detailsPageJournalMenu.selectedEventKindValues ) }">
     <div class="oldorupcoming-text-container">
       <span class="oldorupcoming-sign" data-bind="text: $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.showUpcoming() == true ? '-' : '+'">+</span>
       <span>nadchodzące</span>
