--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -1,54 +1,56 @@
 ﻿<section class="dz-row">
-  <header id="lobbyHeader">
-    <div id="lobbyLogo">
-      <img src="~/Images/Logo/kkLogo.png" alt="logo" style="position:relative;top:4px;" />
-    </div>
-  </header>
+	<header id="lobbyHeader">
+		<div id="lobbyLogo">
+			<img src="~/Images/Logo/kkLogo.png" alt="logo" style="position: relative; top: 4px;" />
+		</div>
+	</header>
+	<section id="lobbyQuoteSection">
+		<p class="lobby-quote">Twój osobisty kalendarz stworzony na miare Twoich potrzeb.</p>
+	</section>
+	<nav id="lobbyNavContainer">
+		<a href="#0" class="selected-nav-link">Strona Główna</a>
+		<a href="#1">Kalendarz</a>
+		<a href="#2">Dziennik</a>
+	</nav>
 
-  <nav id="lobbyNavContainer">
-    <a href="#0" class="selected-nav-link">Strona Główna</a>
-    <a href="#1">Kalendarz</a>
-    <a href="#2">Dziennik</a>
-  </nav>
+	@Html.Partial( "_Login", new KalendarzKarieryData.Models.AccountModels.LoginModel() )
+	@Html.Partial( "_Register", new KalendarzKarieryData.Models.ViewModels.RegisterViewModel() )
 
-  @Html.Partial("_Login", new KalendarzKarieryData.Models.AccountModels.LoginModel())
-  @Html.Partial("_Register", new KalendarzKarieryData.Models.ViewModels.RegisterViewModel())
-  <section id="lobbyQuoteSection">
-    <p class="lobby-quote">Twój osobisty kalendarz stworzony na miare Twoich potrzeb.</p>
-  </section>
 </section>
 <section class="dz-row" style="height: 100px;">
-  <div id="addPrivateEventBtn" class="hover-cursor-pointer" style="display: none;" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>
+	<div id="addPrivateEventBtn" class="hover-cursor-pointer" style="display: none;" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>
 </section>
 <section class="dz-row" style="overflow: hidden;">
-  <header class="section-title">Nadchodzące wydarzenia</header>
-  <section id="lobbyTableOfEventsSection">
+	<header class="section-title">Nadchodzące wydarzenia</header>
+	<section id="lobbyTableOfEventsSection">
 
-    @Html.Partial("_LobbyEventsMenuItems")
+		@Html.Partial( "_LobbyEventsMenuItems" )
 
-    <div id="lobbyDisplayEventsOverviewContainer" class="display-events-overview-container" data-bind="visible: $root.lobbyPagePublicEventListMenu.isOpen()">
-      <header class="display-events-overview-header">
-        <span class="display-events-header-menu-title selected hover-cursor-pointer">Publiczne wydarzenia</span>
-        <span class="btn-close hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</span>
-      </header>
-      @Html.Partial("_LobbyPublicEventList")
-    </div>
-    <input type="button" value="Stwórz publiczne wydarzenie +" id="addPublicEventBtn" class="btn-add green-color hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }" />
-  </section>
+		<div id="lobbyDisplayEventsOverviewContainer" class="display-events-overview-container" data-bind="visible: $root.lobbyPagePublicEventListMenu.isOpen()">
+			<header class="display-events-overview-header">
+				<span class="display-events-header-menu-title selected hover-cursor-pointer">Publiczne wydarzenia</span>
+				<span class="btn-close hover-cursor-pointer" data-bind="click: $root.closeAllSelectedEventsListContainerOnClick">x</span>
+			</header>
+			@Html.Partial( "_LobbyPublicEventList" )
+		</div>
+		<div class="lobby-menu-container">
+			<input type="button" value="Stwórz publiczne wydarzenie" id="addPublicEventBtn" class="btn-add gray-color hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }" />
+		</div>
+	</section>
 </section>
 <section class="dz-row">
-  <header class="section-title">Tablica wydarzeń</header>
-  <section id="lobbyEventsMasonryContainer">
-    <div class="grid js-masonry" data-bind="masonry: { data: publicEvents, masonryOptions: { itemClass: 'event-block-container', gutter: 10 } }">
-      <div class="event-block-container" data-bind="attr: { 'data-eventid': id }">
-          @Html.Partial("_LobbyEventBlock")
-      </div>
-    </div>
-  </section>
-  @*	@Html.Partial( "_LobbyNews" )*@
-  <footer class="lobby-footer">
-    <span>Kalendarz Kariery 2015, wszelkie prawa zastrzeżone</span>
-  </footer>
+	<header class="section-title">Tablica wydarzeń</header>
+	<section id="lobbyEventsMasonryContainer">
+		<div class="grid js-masonry" data-bind="masonry: { data: publicEvents, masonryOptions: { itemClass: 'event-block-container', gutter: 10 } }">
+			<div class="event-block-container" data-bind="attr: { 'data-eventid': id }">
+				@Html.Partial( "_LobbyEventBlock" )
+			</div>
+		</div>
+	</section>
+	@*	@Html.Partial( "_LobbyNews" )*@
+	<footer class="lobby-footer">
+		<span>Kalendarz Kariery 2015, wszelkie prawa zastrzeżone</span>
+	</footer>
 </section>
 
 
