--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyPublicEventList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyPublicEventList.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="display-events-overview-body">
-  <div class="legend-oldorupcoming hover-cursor-pointer" data-bind="click: function () { $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld( !$root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld() ), $root.showSelectedEvents( $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents, 'old', $root.lobbyPagePublicEventListMenu.selectedEventKindValues ) }">
+  <div class="legend-oldorupcoming hover-cursor-pointer" data-bind="css: { open: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld() }, click: function () { $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld( !$root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld() ), $root.showSelectedEvents( $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents, 'old', $root.lobbyPagePublicEventListMenu.selectedEventKindValues ) }">
     <div class="oldorupcoming-text-container">
       <span class="oldorupcoming-sign" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showOld() == true ? '-' : '+'">+</span>
       <span>stare</span>
@@ -29,7 +29,7 @@
     </div>
     
   </div>
-  <div class="legend-oldorupcoming hover-cursor-pointer" data-bind="click: function () { $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming( !$root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming() ), $root.showSelectedEvents( $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents, 'upcoming', $root.lobbyPagePublicEventListMenu.selectedEventKindValues ) }">
+  <div class="legend-oldorupcoming hover-cursor-pointer" data-bind="css: { open: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming() }, click: function () { $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming( !$root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming() ), $root.showSelectedEvents( $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.selectedEvents, 'upcoming', $root.lobbyPagePublicEventListMenu.selectedEventKindValues ) }">
     <div class="oldorupcoming-text-container">
       <span class="oldorupcoming-sign" data-bind="text: $root.lobbyPagePublicEventListMenu.menuItems.publicEvents.showUpcoming() == true ? '-' : '+'">+</span>
       <span>nadchodzące</span>
