added recently added event list and upcoming event list

--- a/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
@@ -158,7 +158,9 @@
 
 .event-block-expand .event-block {
 	line-height: 1;
-	background: rgb(251, 251, 250);
+	background: rgb(251,251,251);
+	border: 1px solid #dcdbd7;
+	border-right: none;
 }
 
 .event-block-expand .event-block-info-link {
