--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -32,6 +32,7 @@ header, footer, nav, section, div {
 	display: block;
 	margin: 0;
 }
+
 pre {
 	margin: 0;
 	padding: 0;
@@ -160,21 +161,19 @@ fieldset {
 }
 
 .lobby-quote {
-	font-size: 2em;
+	font-size: 1.4em;
 	line-height: 1;
-	margin: 0;
 	color: #cacaca;
 }
 
 #addPublicEventBtn {
-	float: right;
-	margin-right: 20px;
-	padding: 14px;
+	padding: 10px;
+	background: rgb(247, 247, 247);
 }
 
 .dz-row {
 	position: relative;
-	margin-bottom: 20px;
+	/*margin-bottom: 20px;*/
 	/*top: 20px;*/
 }
 
@@ -187,6 +186,8 @@ fieldset {
 #lobbyNavContainer {
 	font-size: 1.2em;
 	text-align: center;
+	padding-top: 30px;
+	padding-bottom: 60px;
 }
 
 	#lobbyNavContainer a {
@@ -203,31 +204,32 @@ fieldset {
 }
 
 #lobbyTableOfEventsSection {
-	border-top: 1px solid #E8E8E8;
-	padding-top: 20px;
+	background: #ececec;
+	padding-bottom: 10px;
 }
 
 .events-menu-container {
 	text-align: center;
-	background: #e6e6e6;
-	padding-top: 20px;
-	padding-bottom: 4px;
+	padding-top: 10px;
+	float: right;
+	margin-right: 10px;
 }
 
 .menu-item-container {
 	display: inline-block;
 	position: relative;
 	margin-bottom: 20px;
-	/*border: 2px solid rgb(247, 247, 247);*/
+	background: white;
+	transition-duration: .5s;
 }
 
 	.menu-item-container.selected {
-		background: #ececec;
+		background: #d6d6d6;
 	}
 
 		.menu-item-container.selected .menu-item-number-upcoming {
 			color: gray;
-			background: #f7f7f7;
+			/*background: #f7f7f7;*/
 		}
 
 .menu-item {
@@ -277,13 +279,17 @@ fieldset {
 .menu-item-number-upcoming {
 	font-size: 3em;
 	color: rgb(189, 189, 189);
-	border: 2px solid #a2a2a2;
 }
 
 
 .display-events-overview-container {
-	border: 2px solid grey;
-	margin-bottom: 100px;
+	border: 1px solid #b1b1b1;
+	clear: both;
+	width: 98%;
+	margin: 0 auto;
+	/* padding-bottom: 20px; */
+	margin-bottom: 20px;
+	margin-top: 10px;
 }
 
 .display-events-overview-header {
@@ -292,9 +298,9 @@ fieldset {
 	font-size: 1.4em;
 	position: relative;
 	color: #cacaca;
-	background: gray;
+	background: #d6d6d6;
 	overflow: hidden;
-	border-bottom: 2px solid grey;
+	border-bottom: 1px solid #b1b1b1;
 	font-family: Raleway-Regular;
 }
 
@@ -310,8 +316,7 @@ fieldset {
 
 .display-events-overview-body {
 	padding-bottom: 40px;
-	padding-top: 40px;
-	background: #f7f7f7;
+	background: #d6d6d6;
 }
 
 .display-events-overview-container .legend-oldorupcoming {
@@ -326,14 +331,13 @@ fieldset {
 }
 
 	.display-events-overview-container .legend-oldorupcoming.open {
-		background: #cecece;
 	}
 
 .oldorupcoming-event-count {
 	padding-right: 10px;
 	position: absolute;
 	right: 0;
-	color: white;
+	color: gray;
 }
 
 .oldorupcoming-expand-text {
@@ -342,9 +346,9 @@ fieldset {
 }
 
 .display-events-overview-item {
-	border-left: 2px solid #cecece;
+	border-left: 1px solid #cecece;
 	border-right: 2px solid #DEDEDE;
-	background: #f7f7f7;
+	background: #ececec;
 	overflow: hidden;
 	min-height: 32px;
 }
@@ -368,7 +372,6 @@ fieldset {
 #lobbyEventsMasonryContainer {
 	height: 100%;
 	width: 100%;
-	border-top: 1px solid #E8E8E8;
 	padding-top: 20px;
 }
 
@@ -751,8 +754,9 @@ fieldset {
 	padding: 0 20px;
 	padding-bottom: 4px;
 	color: white;
-	background: #FD6969;
+	/*background: #FD6969;*/
 	font-size: 1.2em;
+	background: #b1b1b1;
 }
 
 .gray-color {
@@ -785,13 +789,12 @@ fieldset {
 }
 
 .section-title {
-	font-size: 2em;
+	font-size: 1.6em;
 	color: #a2a2a2;
-	padding-right: 10px;
-	width: 50%;
-	background: #d4d4d4;
-	text-align: right;
-	box-sizing: border-box;
+	text-align: center;
+	padding-bottom: 40px;
+	padding-top: 10px;
+	border-top: 1px solid white;
 }
 
 .hover-cursor-pointer:hover {
@@ -811,6 +814,10 @@ li.line-through-text {
 	color: black;
 }
 
+.overview-events-list-container {
+	padding-bottom: 20px;
+}
+
 .overview-item-inner-wrapper {
 	font-size: 1em;
 	color: #5D5B55;
@@ -819,7 +826,7 @@ li.line-through-text {
 }
 
 	.overview-item-inner-wrapper:hover {
-		background: #ececec;
+		background: #f7f6f5;
 		cursor: pointer;
 	}
 
@@ -834,7 +841,7 @@ li.line-through-text {
 .list-item-title {
 	line-height: 1;
 	vertical-align: bottom;
-	padding-left: 4px;
+	padding-left: 8px;
 }
 
 .list-item-star {
@@ -853,10 +860,10 @@ li.line-through-text {
 	display: inline-block;
 	text-align: right;
 	padding: 0 4px;
+	color: #b5b5b5;
 }
 
 .event-block-expand {
-	border: 4px solid gray;
 }
 
 .event-kind-tag {
@@ -884,16 +891,12 @@ li.line-through-text {
 }
 
 .lobby-menu-container {
-	width: 50%;
-	height: 200px;
-	background: #ECECEC;
-	float: right;
-	text-align: right;
-	padding: 20px 0;
-	font-size: 1.2em;
-	color: #777771;
+	display: inline-block;
 	padding: 20px;
 	box-sizing: border-box;
+	background: #ececec;
+	min-height: 200px;
+	vertical-align: top;
 }
 
 .small-kk-logo {
@@ -1008,9 +1011,9 @@ li.line-through-text {
 
 #btnAddNewEvent {
 	float: right;
-	font-size: 1em;
+	font-size: .6em;
 	margin-right: 50%;
-	padding: 0 40px;
+	padding: 10px 40px;
 	margin-top: 20px;
 }
 
