--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -17,13 +17,74 @@
 	@Html.Partial( "_Register", new KalendarzKarieryData.Models.ViewModels.RegisterViewModel() )
 
 </section>
-<section class="dz-row" style="height: 100px;">
-	<div id="addPrivateEventBtn" class="hover-cursor-pointer" style="display: none;" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>
+<section class="dz-row" style="background: rgb(236, 236, 236); border-right: 2px solid #f7f6f5; border-left: 3px solid #f7f6f5; border-top: 1px solid #e2e2e2;">
+	@*<div id="addPrivateEventBtn" class="hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>*@
+	<section class="lobby-overview" style="width:48%;">
+		<div class="overview-events-list-container">
+		<h3 style="padding-left:100px;font-weight:normal;margin-top:10px;">
+		Najnowsze wydarzenia
+		</h3>
+			<ul data-bind="foreach: $root.lobbyPageRecentlyAddedPublicEvents" style="padding:0;">
+				<li style="list-style:none;">
+					<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+					<div class="display-events-overview-item">
+						<div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
+							<div class="rg-inline-block">
+								<span class="list-item-title" data-bind="text: name"></span>
+							</div>
+							<div class="inline-block" style="float: right;">
+								<span class="list-item-date">
+									<span class="list-item-other" data-bind="text: startDate.displayFullDate()"></span>
+									<span class="list-item-other" data-bind="text: startDate.displayFullTime()"></span>
+								</span>
+							</div>
+						</div>
+						<div class="event-block-expand" style="display: none;">
+							@Html.Partial("_LobbyEventBlock")
+						</div>
+					</div>
+				</li>
+
+			</ul>
+
+		</div>
+		<div class="overview-events-list-container">
+			<h3 style="padding-left: 100px; font-weight: normal; margin-top: 10px;">Najbliższe wydarzenia</h3>
+			<ul data-bind="foreach: $root.lobbyPageUpcomingPublicEvents" style="padding: 0;">
+				<li style="list-style: none;">
+					<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+					<div class="display-events-overview-item">
+						<div class="overview-item-inner-wrapper" data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
+							<div class="rg-inline-block">
+								<span class="list-item-title" data-bind="text: name"></span>
+							</div>
+							<div class="inline-block" style="float: right;">
+								<span class="list-item-date">
+									<span class="list-item-other" data-bind="text: startDate.displayFullDate()"></span>
+									<span class="list-item-other" data-bind="text: startDate.displayFullTime()"></span>
+								</span>
+							</div>
+						</div>
+						<div class="event-block-expand" style="display: none;">
+							@Html.Partial("_LobbyEventBlock")
+						</div>
+					</div>
+				</li>
+
+			</ul>
+
+		</div>
+	</section>
+	<section>
+	</section>
+
 </section>
 <section class="dz-row" style="overflow: hidden;">
 	<header class="section-title">Nadchodzące wydarzenia</header>
 	<section id="lobbyTableOfEventsSection">
-
+		<div class="lobby-menu-container">
+			<input type="button" value="Stwórz publiczne wydarzenie" id="addPublicEventBtn" class="btn-add gray-color hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }" />
+		</div>
 		@Html.Partial( "_LobbyEventsMenuItems" )
 
 		<div id="lobbyDisplayEventsOverviewContainer" class="display-events-overview-container" data-bind="visible: $root.lobbyPagePublicEventListMenu.isOpen()">
@@ -33,9 +94,7 @@
 			</header>
 			@Html.Partial( "_LobbyPublicEventList" )
 		</div>
-		<div class="lobby-menu-container">
-			<input type="button" value="Stwórz publiczne wydarzenie" id="addPublicEventBtn" class="btn-add gray-color hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }" />
-		</div>
+
 	</section>
 </section>
 <section class="dz-row">
